# mongodb_streamlit

./: .gitignore  .pre-commit-config.yaml  README.md  dockerfile  pyproject.toml  requirements.txt
src/controller/: main.py
src/model/: ingestion.py
src/tools/: mongo_connection.py
