[project]
name = "mongodb-streamlit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.3.2",
    "mermaid-py>=0.8.0",
    "mkdocs>=1.6.1",
    "pre-commit>=4.3.0",
    "pyarrow>=21.0.0",
    "pymongo>=4.14.1",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.1",
]
